bauer/tests/ui/array-repeat-n.fail.stderr
error: `repeat_n` may not be used on arrays
 --> tests/ui/array-repeat-n.fail.rs:5:23
  |
5 |     #[builder(repeat, repeat_n = 3)]
  |                       ^^^^^^^^

warning: unused variable: `field_a`
 --> tests/ui/array-repeat-n.fail.rs:6:5
  |
6 |     field_a: [u32; 3],
  |     ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_field_a`
  |
  = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default
